--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "flowrty-cli": "index.js"
   },
   "scripts": {
+    "lint": "standard --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/davidedantonio/flowrty-cli/issues"
+  },
+  "pre-commit": {
+    "run": ["lint"]
   },
   "homepage": "https://github.com/davidedantonio/flowrty-cli#readme",
   "devDependencies": {
