--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   },
   "pre-commit": {
     "run": [
-      "lint"
+      "lint",
+      "unit"
     ]
+  },
+  "tap": {
+    "check-coverage": false
   },
   "homepage": "https://github.com/davidedantonio/flowrty-cli#readme",
   "devDependencies": {
